# dpbook

./: .dockerignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  WORKFLOWS.md  contacts.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
src/: main.rs
src/application/: mod.rs  validation.rs
src/application/services/: contact_service.rs  mod.rs
src/application/use_cases/: add_contact.rs  delete_contact.rs  find_contact.rs  list_contacts.rs  mod.rs  search_contacts.rs  update_contact.rs
src/domain/: errors.rs  mod.rs
src/domain/entities/: contact.rs
src/domain/repositories/: contact_repository.rs  errors.rs  mod.rs
src/domain/value_objects/: contact_id.rs  email.rs  mod.rs  phone_number.rs
src/infrastructure/: mod.rs
src/infrastructure/persistence/: file_storage.rs
src/infrastructure/repositories/: file_contact_repository.rs  mod.rs
src/presentation/cli/: app.rs  commands.rs  formatters.rs  mod.rs
