[package]
name = "dpbook"
version = "0.1.1"
edition = "2024"
description = "CLI based phonebook application"
license = "MIT"
repository = "https://github.com/Darshan25503/dpbook.git"
author = "Darshan Bhensdadia"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
regex = "1.10"
